Chat May 30th - retroFit REST; RemoteDataItemCrudOperationsImpl

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.chefk.maddemo18">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".DataItemApplication"
         android:allowBackup="true"
