DetailView Expiry Date/Time picker; CheckBoxes Favorite isDone

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailviewActivity">
+        <activity android:name=".DetailviewActivity" android:label="Edit Todo">
 
         </activity>
     </application>
